fix some overflow bugs

--- a/main/templates/whoopieV1/assets/css/index/search/search.scss
+++ b/main/templates/whoopieV1/assets/css/index/search/search.scss
@@ -261,3 +261,25 @@
         width: 100%;
     }
 }
+
+// when search is empty
+.empty_search{
+    .row{
+        height: 80vh;
+    }
+    .main_field_of_ES{
+        width: 700px;
+        padding: 30px;
+        border-radius: 15px;
+        background-color: $white;
+        margin: 0 auto;
+        p{
+            font-size: 1.5rem;
+            font-weight: bold;
+            line-height: 48px;
+            text-align: center;
+            direction: rtl;
+            margin: 0;
+        }
+    }
+}
