--- a/main/templates/whoopieV1/assets/css/layout/layout.scss
+++ b/main/templates/whoopieV1/assets/css/layout/layout.scss
@@ -194,7 +194,7 @@ nav {
 }
 
 // repost modal
-#report_bug {
+.report_bug {
     cursor: pointer;
 }
 
